* fixing styling bug in block-widget-limit wrapping

--- a/app/view/theme/admin/css/listings.less
+++ b/app/view/theme/admin/css/listings.less
@@ -237,7 +237,8 @@ table.list {
 	float: right;
 	text-align: right;
 	overflow: hidden;
-	width: 30%;
+	width: auto;
+	white-space: nowrap;
 	-webkit-transition: all .1s linear .5s;
 	transition: all .1s linear .5s;
 
